# CosmicTrigger

./: AUTORS  CMakeLists.txt  LICENSE  Makefile  README.md  docSettings.h  main.cpp
examples/: Alim.cpp  CMakeLists.txt  HvCalib.cpp  exampleFull.cpp  exampleHV.cpp  exampleTDC.cpp  logconfig.ini  normalOp.cpp
include/: CaenetBridge.cpp  CaenetBridge.h  CaennetBridge.cpp  CaennetBridge.h  CommonDef.cpp  CommonDef.h  Discri.cpp  Discri.h  HV.cpp  HVmodule.cpp  HVmodule.h  N470HVmodule.h  PythonCaenVmeTypes.h  PythonModule.cpp  PythonModule.h  SY527PowerSystem.h  Scaler.cpp  Scaler.h  TDC.cpp  TDC.h  TTCvi.cpp  TTCvi.h  V1190Event.h  VmeBoard.cpp  VmeBoard.h  VmeController.cpp  VmeController.h  VmeUsbBridge.cpp  VmeUsbBridge.h  logger.h
src/: CaenetBridge.cpp  CommonDef.cpp  Discri.cpp  HVmodule.cpp  N470HVmodule.cpp  PythonModule.cpp  SY527PowerSystem.cpp  Scaler.cpp  TDC.cpp  TTCvi.cpp  V1190Event.cpp  VmeBoard.cpp  VmeController.cpp  VmeUsbBridge.cpp  logger.cpp
